updated lab9 so that the new items add to the list and to the total.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
   </head>
   <body>
     <script type="text/javascript" src="script.js"></script>
+<form>
+Add to list:<br>
+name: <input id="a"><br>
+price: <input id="b">
+<button type="button" onclick="addItems()">Add Item</button>
+</form>
+
+<!-- <button type="button" onclick="addItems()">Add Item</button> -->
+<!--
+    <form action="" id="groceryList" onsubmit="return false;">
+       Name:<br>
+       <input type="text" name="firstname"/><br>
+       Price:<br>
+       <input type="text" name="lastname" onclick="calculateTotal()"/> </br>
+       <input type="submit" value="Add"/> -->
+
 
 
   </body>
